--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 300;
-  font-display: swap;
+  font-display: fallback;
   src: url('/src/assets/fonts/LatoLatin-Light.woff2') format('woff2');
 }
 
@@ -12,7 +12,7 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: fallback;
   src: url('/src/assets/fonts/LatoLatin-Regular.woff2') format('woff2');
 }
 
@@ -20,7 +20,7 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 600;
-  font-display: swap;
+  font-display: fallback;
   src: url('/src/assets/fonts/LatoLatin-Semibold.woff2') format('woff2');
 }
 
@@ -28,7 +28,7 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
+  font-display: fallback;
   src: url('/src/assets/fonts/LatoLatin-Bold.woff2') format('woff2');
 }
 
@@ -50,9 +50,11 @@
 
 body {
   background-color: var(--white);
+  color: var(--gray-800);
   font-family: var(--font-primary);
   font-weight: var(--font-regular);
   line-height: 1.25;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -64,6 +66,7 @@ img {
 }
 
 button {
+  appearance: none;
   font-family: var(--font-primary);
   cursor: pointer;
 }
