--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -5,6 +5,7 @@
   --gray-50: #fafafa;
   --gray-100: #eae9e9;
   --gray-200: #d9d9d9;
+  --gray-400: #b5b5b5;
   --gray-800: #484848;
   --gray-900: #1e1e1e;
   --white: #ffffff;
