--- a/src/components/MainMenu/styles.module.css
+++ b/src/components/MainMenu/styles.module.css
@@ -25,7 +25,7 @@
   line-height: 0;
   padding: var(--space-4) var(--space-6);
   border-radius: inherit;
-  transition: background-color 300ms ease-in;
+  transition: color 300ms;
 
   &:hover {
     color: var(--green-500);
