--- a/src/templates/PanelTemplate/styles.module.css
+++ b/src/templates/PanelTemplate/styles.module.css
@@ -1,15 +1,19 @@
 .fullContainer {
-  display: grid;
-  grid-template-columns: 17.5rem 1fr;
   height: 100vh;
   height: 100svh;
 }
 
 .sidebar {
+  width: 17.5rem;
+  height: 100%;
   display: grid;
   grid-template-rows: repeat(2, minmax(min-content, max-content)) 1fr;
-  height: 100%;
+  background-color: var(--white);
   padding: var(--space-6) 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
 }
 
 .siteLogo {
@@ -41,11 +45,13 @@
 }
 
 .app {
+  height: 100%;
   display: grid;
-  grid-template-columns: 2.1875rem minmax(auto, 68.125rem) 2.1875rem;
+  grid-template-columns: 2.1875rem minmax(0, 95rem) 2.1875rem;
   grid-template-rows: minmax(min-content, max-content) 1fr;
   justify-content: center;
   background-color: var(--green-500);
+  margin-left: 17.5rem;
 }
 
 .topBar {
@@ -101,4 +107,5 @@
 
 .main {
   grid-column: 2 / -2;
+  padding-bottom: var(--space-8);
 }
