refactor(ui): change files extension from components

--- a/src/presentation/ui/input-group/styles.module.css
+++ b/src/presentation/ui/input-group/styles.module.css
@@ -37,3 +37,9 @@
     margin-top: -2px;
   }
 }
+
+.inputError {
+  color: var(--red-500);
+  font-size: var(--font-sm);
+  padding: var(--space-1) var(--space-3);
+}
