--- a/src/presentation/ui/button/styles.module.css
+++ b/src/presentation/ui/button/styles.module.css
@@ -6,6 +6,10 @@
   padding: var(--space-2) var(--space-6);
   border: 0;
   border-radius: var(--rounded-xs);
+
+  &:disabled {
+    cursor: not-allowed;
+  }
 }
 
 .primary {
