feat(ui): create user authentication and restrict painel for authenticated user
Added:
- Install Axios, React Hook Form, Zod and Vitest
- Create path aliases @application, @domain, @infra and @test
- User model
- Create Axios adapter
- Create tests for the Axios adapter

Changed:
- Move static styles to the presentation folder

--- a/src/presentation/pages/sign-in/styles.module.css
+++ b/src/presentation/pages/sign-in/styles.module.css
@@ -25,6 +25,12 @@
   font-weight: var(--font-light);
 }
 
+.loginError {
+  color: var(--red-500);
+  font-size: var(--font-md);
+  text-align: center;
+}
+
 .signInForm {
   display: grid;
   gap: var(--space-4);
