--- a/src/presentation/styles/tokens.css
+++ b/src/presentation/styles/tokens.css
@@ -2,6 +2,7 @@
   --green-500: #1bc681;
   --green-600: #1da66f;
   --blue-400: #43b7ff;
+  --red-500: #ff4444;
   --gray-50: #fafafa;
   --gray-100: #eae9e9;
   --gray-200: #d9d9d9;
